# caf-website

./: .gitattributes  .gitignore  README.md  pyproject.toml
models/: mlp_state_dict_mlt.pkl  mlp_state_dict_nnlm.pkl  mlp_state_dict_w2v.pkl  svm_mlt.pkl  svm_nnlm.pkl  svm_w2v.pkl  xgboost_internal_mlt.json  xgboost_internal_nnlm.json  xgboost_internal_w2v.json  xgboost_nnlm.pkl
src/caf_website/: __init__.py  __main__.py  callbacks.py  strings.py  utils.py
src/caf_website/models/: catalog.py  types.py
src/caf_website/models/classifiers/: linear_svm.py  lstm.py  mlp.py  xgboost.py
src/caf_website/models/embedders/: multilingual_transformer.py  nnlm.py  word2vec.py
src/caf_website/pipeline/: __init__.py  cleaning.py
tests/caf_website/: test_cleaning_pipeline.py  test_prediction_pipeline.py  test_utils.py
