[tool.poetry]
name = "caf_website"
version = "0.1.0"
description = ""
authors = ["Yoquec <alvaro.viejo@pm.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
gradio = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "caf_website.__main__:main"
publish = "caf_website.__main__:publish"
