[tool.poetry]
name = "caf_website"
version = "0.1.0"
description = ""
authors = ["Yoquec <alvaro.viejo@pm.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
gradio = "^4.15.0"
tensorflow-text = "^2.15.0"
tensorflow-hub = "^0.15.0"
torch = {version = "^2.1.2+cpu", source = "torch-cpu"}
spacy = "^3.7.2"
pyspellchecker = "^0.8.1"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "caf_website.__main__:main"
publish = "caf_website.__main__:publish"
